Add updated config info to documentation for presto-admin
Testing: make docs